tests/generics_type_arity_bad.stderr
tests/generics_type_arity_bad.hop:7:8: error: HOP2004: type mismatch
